img, text overlap fix lg screen updated

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -278,6 +278,9 @@ h5.l-h{
 }
 
 @media screen and (max-width:1116px) {
+    .custome-accordion .accordion-button{
+        font-size:2.5rem !important;
+    }
     .card-price {
         width: 250px;
     }
